Fixed bug with clicking menu items and adjusted z-index values to reflect a drop-down menu

--- a/drop-down-menu.css
+++ b/drop-down-menu.css
@@ -10,15 +10,11 @@
   overflow: hidden;
   position: absolute;
   top: 0;
+  z-index: 1;
 }
 
 .dropdown-menu-heading, .dropdown-menu-item {
   cursor: pointer;
-}
-
-.dropdown-menu-heading {
-  position: relative;
-  z-index: 1;
 }
 
 .dropdown-menu-item {
