--- a/sample/styles.css
+++ b/sample/styles.css
@@ -14,3 +14,7 @@
 .menu-one-heading {
   margin: 0.5rem 0.5rem 0;
 }
+
+.menu-two {
+  margin-top: 10rem;
+}
